<resources>
    <string name="app_name">轻工大校友录</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="username">姓名</string>
    <string name="password">密码</string>
    <string name="Account">账号</string>
    <string name="register">注册</string>
    <string name="remember">记住密码</string>
    <string name="sign">登陆</string>
    <string name="cancel">取消</string>
    <string name="classname">班级</string>
    <string name="year">入学年份</string>
    <string name="college">学院</string>
    <string name="me">我</string>
    <string name="group">组群</string>
    <string name="main">主页</string>
    <string name="forum">论坛</string>
    <string name="finish">退出</string>
    <string name="hint_input">输入消息</string>
    <string name="send_message">发送</string>
    <string name="net_timeout">网络连接超时</string>
    <string name="net_failed">网络连接失败</string>
    <string name="data_error">数据错误</string>
    <string name="introduction">&#160;&#160;武汉轻工大学（Wuhan Polytechnic University）原名武汉工业学院，位于九省通衢的湖北省省会城市-—武汉市，是一所以工科为主干，工、管、理、文、经、农、艺、法等学科协调发展的多科性大学。\r\n&#160;&#160;学校创建于1951年，是全国最早一所培养粮食行业专门人才的学校。曾先后隶属于原国家粮食部、商业部、国内贸易部，1998年实行中央和地方共建，以湖北省管理为主的体制，是湖北省和国家粮食局重点支持建设的普通高校，国家首批卓越农林人才教育培养计划改革试点高校。2013年5月经教育部批准，武汉工业学院更名为武汉轻工大学。武汉轻工大学是中国目前唯一一所以“轻工”特色命名的高校，学校的前身是曾经闻名全国的三大粮院之一“武汉粮院”。</string>
</resources>
