<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundchange"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="56sp">

        <ImageView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:background="@drawable/qgd_logo" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="3"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/user_laber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Account"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

            <TextView
                android:id="@+id/password_laber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="numberPassword"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_button"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/log_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:text="@string/sign"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/registerProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true" />
    </RelativeLayout>


</LinearLayout>
